--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,13 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# OS generated
+# From https://stackoverflow.com/questions/18225126/how-to-use-git-for-unity3d-source-control
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
